--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "tinymce-mention-plugin",
     "version": "4.0.9",
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/BlueprintSys/tinymce-mention-plugin"
@@ -8,8 +9,24 @@
     "description": "Mention/Autocomplete plugin for TinyMCE WYSIWYG editor (no jQuery dependent)",
     "author": "Steven Devooght",
     "bugs": {
-        "url": "https://github.com/BlueprintSys/tinymce-mention-plugin/issues"
+        "url": "https://github.com/suryapratap/tinymce-mention-plugin/issues"
     },
-    "main": "index.js",
-    "license": "MIT"
+    "scripts": {
+        "build": "node build.js"
+    },
+    "dependencies": {
+        "tinymce": "5.10.7"
+    },
+    "devDependencies": {
+        "esbuild": "0.24.2",
+        "npm-dts": "1.3.13",
+        "typescript": "5.7.2"
+    },
+    "license": "MIT",
+    "files": [
+        "dist/*"
+    ],
+    "module": "dist/index.esm.js",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts"
 }
