fix module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tinymce-mention-plugin",
+    "name": "tinymce-mention",
     "version": "4.0.9",
     "type": "module",
     "repository": {
